--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,8 +1,21 @@
 .footer {
-    background-color: black;
-    height: 70px;
+    background-color:#301938;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+
+.footer a{
+    font-size: 15px;
+    color: aliceblue;
+    margin-right: 1em;
+    text-decoration: none;
+    transition: .3s;
+
+}
+
+.footer a:hover{
+    color: #999;
 }
