--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,10 +1,24 @@
 .navbar {
     display: flex;
-    height: 60px;
+    height: 50px;
     padding: 20px 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: #301938;
 
 }
+
+.logo1 {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-left: 1em;
+
+}
+
+.link {
+    display: flex;
+    list-style: none;
+}
+
 
 .navbar a{
     font-size: 25px;
@@ -12,6 +26,7 @@
     margin-right: 1em;
     text-decoration: none;
     transition: .3s;
+    list-style: none;
 
 }
 
