ajuste de css e correcao da vinheta

--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -14,10 +14,9 @@
 .main {
     display: flex;
     height:100%;
-    justify-content:space-around;
-    flex-direction: row;
-    padding-left: 30%;
-    padding-right: 30%;
+    flex-direction:row;
+    align-items: center;
+    justify-content:center;
+   
     
 }
-
