--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,12 +5,14 @@
     justify-content: center;
     align-items: center;
     
+    
 }
 
 .footer a{
-    font-size: 15px;
+    font-size: 20px;
     color: aliceblue;
     margin-right: 1em;
+    margin-left: 1em;
     text-decoration: none;
     transition: .3s;
 
