--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    height: 50px;
+    height: 60px;
     padding: 20px 10px;
     background-color: #301938;
 
@@ -11,22 +11,26 @@
     justify-content: center;
     align-items: center; 
     margin-left: 1em;
+    margin-right: 2em;
+    margin-top: 0.5em;
 
 }
 
-.link {
+.navbar li {
     display: flex;
     list-style: none;
+    align-items: center; 
+    
 }
 
 
 .navbar a{
-    font-size: 25px;
+    font-size: 22px;
     color: aliceblue;
     margin-right: 1em;
     text-decoration: none;
     transition: .3s;
-    list-style: none;
+    
 
 }
 
