--- a/styles/Contato.module.css
+++ b/styles/Contato.module.css
@@ -13,9 +13,9 @@
 
 .main {
     display: flex;
-    height:100%;
-    justify-content:space-around;
-    flex-direction: row;
+    height:88vh;
+    justify-content:space-between;
+    align-items: center;
     padding-left: 30%;
     padding-right: 30%;
     
