--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -3,6 +3,19 @@
     display: flex;
     flex-direction: column;
     background-color: #16011e;
-    color: aliceblue;
-  
     }
+
+.mainContent{
+    flex-grow: 1;
+    height: auto;
+    
+}    
+
+.main {
+    display: flex;
+    height:88vh;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
