--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -3,20 +3,21 @@
     display: flex;
     flex-direction: column;
     background-color: #16011e;
-    }
+    
+}
 
 .mainContent{
     flex-grow: 1;
     height: auto;
-    
-}    
+
+}   
 
 .main {
     display: flex;
-    height:100%;
-    flex-direction:row;
+    height:80vh;
+    justify-content: center;
     align-items: center;
-    justify-content:center;
-   
+    
     
 }
+
