--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     background-color: #16011e;
+    color: aliceblue;
     }
 
 .mainContent{
@@ -16,6 +17,7 @@
     height:88vh;
     justify-content: center;
     align-items: center;
+    
     
     
 }
