--- a/styles/Principal.module.css
+++ b/styles/Principal.module.css
@@ -16,6 +16,20 @@
     height:100%;
     align-items: center;
     justify-content: center;
-  
+    flex-direction: column;
+
+}
+
+.carouselG {
+    display:flex;
+    padding-top: 0px;
+    width: 1000px;
+
+    
+}
+
+.carouselP {
+    display:flex;
+    padding-bottom: 0px;
     
 }
