correção do arquivo principal2

--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -1,12 +1,3 @@
-.carouselG {
-    display:flex;
-    padding-top: 0px;
-  
-    
-}
-
-.carouselP {
-    display:flex;
-    padding-bottom: 0px;
-    
+.banner{
+   
 }
