--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -16,8 +16,19 @@
 
 }
 
+.links {
+    display: flex;
+    align-items:center;
+    
+    
+
+}
+
+
+
 .navbar li {
     display: flex;
+    
     list-style: none;
     align-items: center; 
     
