--- a/styles/Principal2.module.css
+++ b/styles/Principal2.module.css
@@ -3,20 +3,45 @@
     display: flex;
     flex-direction: column;
     background-color: #16011e;
+    
     }
 
-.mainContent1{
+
+.mainContent{
+    flex-grow: 1;
+    height: auto;
+    
+    }   
+    
+        
+.destaque a{
+    display: flex;
+    font-size: 25px;
+    color: aliceblue;
+    padding: 10px;
+        
+    
+    }    
+
+
+.maindestaque{
     display: grid;
     justify-content:center;
-    width: 300;
-    height: 500px;
-    background-color: #16011e;
-    padding-bottom: 50px;
-    margin: 0;
+    width: 100;
+    height: 400px;
+    cursor: pointer;  
     
-    
-} 
 
+    }  
+    
+.filmes a{
+    display: flex;
+    font-size: 25px;
+    color: aliceblue;
+    padding: 10px;
+    
+    
+    }      
 
 
 .mainContent2{
@@ -25,6 +50,7 @@
     flex-grow: 1;
     height: auto;
     background-color: #16011e;
+    padding: 30px;
     
 }   
 
